--- a/src/components/stylesforcomponents/Contact.css
+++ b/src/components/stylesforcomponents/Contact.css
@@ -13,7 +13,8 @@
   /* Paragraph */
   .contact-container p {
     font-size: 20px;
-    margin-bottom: 100px;
+    margin-bottom: 30px;
+    font-family: sans-serif;
   }
   
   /* Form */
